--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trendy cookies</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -399,7 +399,7 @@
         </div>
       </footer>
     </div>
-    <script src="js/script.js" type="module"></script>
+    <script src="main.js"></script>
   </body>
 </html>
 <!-- #endregion -->
